--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     ]
   },
   "devDependencies": {
+    "@umijs/plugin-esbuild": "^1.4.1",
+    "babel-plugin-import": "^1.13.3",
     "dumi": "^1.0.13",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
+  },
+  "dependencies": {
+    "antd": "^4.16.13"
   }
 }
